--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/Jeff-Lee-M/OTATest</string>
+					<string>http://192.168.0.126/OTATest/index.html</string>
 				</dict>
 				<dict>
 					<key>kind</key>
